Se modificaron estilos en la carpeta store-product

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -336,6 +336,10 @@ body{
         color: var(--color-primario);
     }
 
+    .list-prod h3{
+        color: var(--color-primario);
+    }
+
     .list-prod img{
         width: 200px;
         border: 1px solid #ccc;
