--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,7 +11,7 @@ body{
 .container{
     border-radius: 30px;
     margin-top: 10px;
-    height: 2000px;
+    height: 0px auto;
     box-shadow: 2px 2px 6px #ccc;
     margin: 30px;
 }
@@ -81,7 +81,7 @@ body{
 .container-image {
     position: relative;
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
   }
 
   .container-image h1 {
@@ -101,6 +101,7 @@ body{
   width: 100%;
   opacity: 1;
   transition: opacity 0.3s ease-in-out;
+  margin-bottom: 50px;
 }
 
 .container-image img:hover{
@@ -180,48 +181,54 @@ body{
 
 /*-------STYLES CSS PARA CREATE-------*/
 
-.store{
-    position: relative;
-    left: 43%;
+
+.stors h1{
+    color: var(--color-secundario);
+    text-align: center;
+}
+
+.alert-div{
+    display: flex;
+    justify-content: center;
 }
 
 .alerta{
-    width: 250px;
+    width: 350px;
     height: 30px;
     line-height: 30px;
-    position: relative;
-    left: 40%;
-    top: 16%;
     color: white;
     background-color: rgb(90, 207, 90);
     border-radius: 10px;
     box-shadow: 2px 3px 6px green;
     text-align: center;
+    margin: 15px;
 }
 
-.store h1{
-    color: var(--color-secundario);
+.alerta a{
+    color: white;
 }
 
-.login-box {
-    margin-top: 60px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
+.cont{
+    display: flex;
+    justify-content: center;
+}
+
+.login-create {
+    margin-top: 30px;
     width: 400px;
     padding: 40px;
-    transform: translate(-50%, -50%);
     background: var(--color-primario);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
-  }
+    margin-bottom: 30px;
+}
 
-  .login-box .user-box {
+  .login-create .user-create {
     position: relative;
   }
 
-  .login-box .user-box input {
+  .login-create .user-create input {
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
@@ -233,7 +240,7 @@ body{
     background: transparent;
   }
 
-  .login-box .user-box label {
+  .login-create .user-create label {
     position: absolute;
     top: 0;
     left: 0;
@@ -244,15 +251,15 @@ body{
     transition: .5s;
   }
 
-  .login-box .user-box input:focus ~ label,
-  .login-box .user-box input:valid ~ label {
+  .login-create .user-create input:focus ~ label,
+  .login-create .user-create input:valid ~ label {
     top: -20px;
     left: 0;
     color: #bdb8b8;
     font-size: 12px;
   }
 
-  .login-box form button {
+  .login-create form button {
     position: relative;
     display: inline-block;
     cursor: pointer;
@@ -269,7 +276,7 @@ body{
     border: none;
   }
 
-  .login-box button:hover {
+  .login-create button:hover {
     background: var(--color-secundario);
     color: #fff;
     border-radius: 5px;
@@ -279,7 +286,7 @@ body{
                 0 0 100px var(--color-secundario);
   }
 
-  .login-box button span {
+  .login-create button span {
     position: absolute;
     display: block;
   }
@@ -293,7 +300,7 @@ body{
     }
   }
 
-  .login-box button span:nth-child(1) {
+  .login-create button span:nth-child(1) {
     bottom: 2px;
     left: -100%;
     width: 100%;
@@ -302,12 +309,150 @@ body{
     animation: btn-anim1 2s linear infinite;
   }
 
-  .login-box button a {
+  .login-create button a {
     text-decoration: none;
     color: white;
   }
 
-  /*-------STYLES CSS PARA CREATE PRODUCT-------*/
+  /*--------STYLOS CSS PARA CREATE PRODUCT-------*/
+  .product-cre h1{
+    color: var(--color-secundario);
+    text-align: center;
+}
+
+.conte{
+    display: flex;
+    justify-content: center;
+}
+
+.alert{
+    display: flex;
+    justify-content: center;
+}
+
+.alerta-producto{
+    width: 390px;
+    height: 30px;
+    line-height: 30px;
+    color: white;
+    background-color: rgb(90, 207, 90);
+    border-radius: 10px;
+    box-shadow: 2px 3px 6px green;
+    text-align: center;
+    margin: 15px;
+}
+
+.alerta-producto a{
+    color: white;
+}
+
+.login-bo {
+    margin-top: 30px;
+    width: 400px;
+    padding: 40px;
+    background: var(--color-primario);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 10px;
+    margin-bottom: 30PX;
+}
+
+  .login-bo .user-bo {
+    position: relative;
+  }
+
+  .login-bo .user-bo input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background: transparent;
+  }
+
+  .login-bo .user-bo label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    pointer-events: none;
+    transition: .5s;
+  }
+
+  .login-bo .user-bo input:focus ~ label,
+  .login-bo .user-bo input:valid ~ label {
+    top: -20px;
+    left: 0;
+    color: #bdb8b8;
+    font-size: 12px;
+  }
+
+  .login-bo form button {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    padding: 10px 20px;
+    color: #ffffff;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 40px;
+    letter-spacing: 4px;
+    background-color: var(--color-primario);
+    border: none;
+  }
+
+  .login-bo button:hover {
+    background: var(--color-secundario);
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px var(--color-secundario),
+                0 0 25px var(--color-secundario),
+                0 0 50px var(--color-secundario),
+                0 0 100px var(--color-secundario);
+  }
+
+  .login-bo button span {
+    position: absolute;
+    display: block;
+  }
+
+  @keyframes btn-anim1 {
+    0% {
+      left: -100%;
+    }
+    50%,100% {
+      left: 100%;
+    }
+  }
+
+  .login-bo button span:nth-child(1) {
+    bottom: 2px;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, var(--color-secundario));
+    animation: btn-anim1 2s linear infinite;
+  }
+
+  .login-bo button a {
+    text-decoration: none;
+    color: white;
+  }
+
+.user-bo p{
+    color: white;
+    font-size: 17px;
+}
+
+  /*-------STYLES CSS PARA MOSTRAR PRODUCTOS-------*/
 
   .login{
     margin-top: 160px;
@@ -321,15 +466,17 @@ body{
     .prod{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
         grid-gap: 10px;
+        margin: 50px;
     }
 
     .list-prod{
         width: 200px;
-        margin-bottom: 30px;
-        border: 1px solid #ccc;
+        margin-bottom: 30px;;
         border-radius: 30px;
         padding: 30px;
+        box-shadow:3px 2px 10px gray;
     }
 
     .list-prod h2{
@@ -340,12 +487,7 @@ body{
         color: var(--color-primario);
     }
 
-    .list-prod img{
-        width: 200px;
-        border: 1px solid #ccc;
-    }
-
-  /*-------STYLES CSS PARA CREATE STORE-------*/
+  /*-------STYLES CSS PARA MOSTRAR TIENDAS-------*/
 
 .list-store{
     display: grid;
@@ -363,20 +505,23 @@ body{
     color: var(--color-primario);
 }
 
+.log {
+    display: flex;
+    justify-content: center;
+}
+
 .element{
     width: 200px;
-    margin-bottom: 30px;
-    border: 1px solid #ccc;
+    margin-bottom: 30px;;
     border-radius: 30px;
     padding: 30px;
-    -webkit-border-radius: 30px;
-    -moz-border-radius: 30px;
-    -ms-border-radius: 30px;
-    -o-border-radius: 30px;
+    box-shadow:3px 2px 10px gray;
 }
 
 .button{
     display: flex;
+    justify-content: center;
+
 }
 
 .button button{
@@ -478,3 +623,134 @@ body{
    .button-two:active .icon svg {
     transform: scale(0.8);
    }
+
+   /*-----STYLOS CSS PARA EDITAR-----*/
+   .store-edit h1{
+    color: var(--color-secundario);
+    text-align: center;
+}
+.conten{
+    display: flex;
+    justify-content: center;
+}
+
+.aler{
+    display: flex;
+    justify-content: center;
+}
+
+.alerta-edit{
+    width: 390px;
+    height: 30px;
+    line-height: 30px;
+    color: white;
+    background-color: rgb(90, 207, 90);
+    border-radius: 10px;
+    box-shadow: 2px 3px 6px green;
+    text-align: center;
+    margin: 15px;
+}
+
+.alerta-edit a{
+    color: white;
+}
+
+.login-box {
+    margin-top: 30px;
+    width: 400px;
+    padding: 40px;
+    background: var(--color-primario);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 10px;
+}
+
+  .login-box .user-box {
+    position: relative;
+  }
+
+  .login-box .user-box input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background: transparent;
+  }
+
+  .login-box .user-box label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    pointer-events: none;
+    transition: .5s;
+  }
+
+  .login-box .user-box input:focus ~ label,
+  .login-box .user-box input:valid ~ label {
+    top: -20px;
+    left: 0;
+    color: #bdb8b8;
+    font-size: 12px;
+  }
+
+  .login-box form button {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    padding: 10px 20px;
+    color: #ffffff;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 40px;
+    letter-spacing: 4px;
+    background-color: var(--color-primario);
+    border: none;
+  }
+
+  .login-box button:hover {
+    background: var(--color-secundario);
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px var(--color-secundario),
+                0 0 25px var(--color-secundario),
+                0 0 50px var(--color-secundario),
+                0 0 100px var(--color-secundario);
+  }
+
+  .login-box button span {
+    position: absolute;
+    display: block;
+  }
+
+  @keyframes btn-anim1 {
+    0% {
+      left: -100%;
+    }
+    50%,100% {
+      left: 100%;
+    }
+  }
+
+  .login-box button span:nth-child(1) {
+    bottom: 2px;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, var(--color-secundario));
+    animation: btn-anim1 2s linear infinite;
+  }
+
+  .login-box button a {
+    text-decoration: none;
+    color: white;
+  }
