--- a/public/css/app.css
+++ b/public/css/app.css
@@ -784,3 +784,21 @@ body{
 .alertas a{
     color: white;
 }
+
+.button-ver{
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.button-ver a{
+    text-decoration: none;
+    color: var(--color-secundario);
+}
+
+.button-ver a:hover{
+    color: white;
+    background-color: #47627c;
+    padding: 5px;
+    border-radius: 10px;
+}
